WIZ-42 graph add, human readable file size function fix

--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -66,7 +66,7 @@
   margin: 0 15px 0 0 !important;
 }
 
-.IconsMenu > li:not(:last-of-type) {
+.IconsMenu > div:not(:last-of-type) li:not(:nth-of-type(2)) {
   margin-right: 21px;
 }
 
@@ -77,4 +77,9 @@
 .IconsMenu > li > a > img:hover,
 .IconsMenu > li > a > img:active {
   transform: scale(1.2);
+}
+
+.GraphWrapper {
+  margin: 0 15px 0 0;
+  color: white;
 }
